cgo/include/urnetwork_sdk.h

/* AllowForegroundChangeListener */
typedef void (*urnet_allow_foreground_change_cb)(void* user_data, bool allow_foreground);
/* AuthLogoutListener */
typedef void (*urnet_auth_logout_cb)(void* user_data);
/* BlockActionOverridesChangeListener */
typedef void (*urnet_block_action_overrides_change_cb)(void* user_data, const char* block_action_overrides_json);
/* BlockActionWindowChangeListener */
typedef void (*urnet_block_action_window_change_cb)(void* user_data, const char* block_action_window_json);
/* BlockStatsChangeListener */
typedef void (*urnet_block_stats_change_cb)(void* user_data, const char* block_stats_json);
/* BlockerEnabledChangeListener */
typedef void (*urnet_blocker_enabled_change_cb)(void* user_data, bool blocker_enabled);
/* CanPromptIntroFunnelChangeListener */
typedef void (*urnet_can_prompt_intro_funnel_change_cb)(void* user_data, bool can_prompt_intro_funnel);
/* CanReferChangeListener */
typedef void (*urnet_can_refer_change_cb)(void* user_data, bool can_refer);
/* CanShowRatingDialogChangeListener */
typedef void (*urnet_can_show_rating_dialog_change_cb)(void* user_data, bool can_show_rating_dialog);
/* ConnectChangeListener */
typedef void (*urnet_connect_change_cb)(void* user_data, bool connect_enabled);
/* ConnectLocationChangeListener */
typedef void (*urnet_connect_location_change_cb)(void* user_data, const char* location_json);
/* ConnectedProviderLocationChangeListener */
typedef void (*urnet_connected_provider_location_change_cb)(void* user_data);
/* ContractDetailsChangeListener */
typedef void (*urnet_contract_details_change_cb)(void* user_data, const char* contract_details_json);
/* ContractRowsListener */
typedef void (*urnet_contract_rows_cb)(void* user_data);
/* ContractStatsChangeListener */
typedef void (*urnet_contract_stats_change_cb)(void* user_data, const char* contract_stats_json);
/* ContractStatusChangeListener */
typedef void (*urnet_contract_status_change_cb)(void* user_data, const char* contract_status_json);
/* DefaultLocationChangeListener */
typedef void (*urnet_default_location_change_cb)(void* user_data, const char* location_json);
/* DnsResolverSettingsChangeListener */
typedef void (*urnet_dns_resolver_settings_change_cb)(void* user_data, const char* dns_resolver_settings_json);
/* ExtenderStatusChangeListener */
typedef void (*urnet_extender_status_change_cb)(void* user_data, const char* status_json);
/* JwtRefreshListener */
typedef void (*urnet_jwt_refresh_cb)(void* user_data, const char* jwt);
/* NetworkPeersChangeListener */
typedef void (*urnet_network_peers_change_cb)(void* user_data, const char* network_peers_json);
/* OfflineChangeListener */
typedef void (*urnet_offline_change_cb)(void* user_data, bool offline, bool vpn_interface_while_offline);
/* PacketStatsChangeListener */
typedef void (*urnet_packet_stats_change_cb)(void* user_data, const char* packet_stats_json);
/* PerformanceProfileChangeListener */
typedef void (*urnet_performance_profile_change_cb)(void* user_data, const char* performance_profile_json);
/* ProvideChangeListener */
typedef void (*urnet_provide_change_cb)(void* user_data, bool provide_enabled);
/* ProvideControlModeChangeListener */
typedef void (*urnet_provide_control_mode_change_cb)(void* user_data, const char* provide_control_mode);
/* ProvideModeChangeListener */
typedef void (*urnet_provide_mode_change_cb)(void* user_data, int64_t provide_mode);
/* ProvideNetworkModeChangeListener */
typedef void (*urnet_provide_network_mode_change_cb)(void* user_data, const char* provide_network_mode);
/* ProvidePausedChangeListener */
typedef void (*urnet_provide_paused_change_cb)(void* user_data, bool provide_paused);
/* ProvideSecretKeysListener */
typedef void (*urnet_provide_secret_keys_cb)(void* user_data, const char* provide_secret_key_list_json);
/* ThroughputListener */
typedef void (*urnet_throughput_cb)(void* user_data);
void urnet_connect_view_controller_connect_best_available(uint64_t self);
void urnet_connect_view_controller_connect_location_changed(uint64_t self, const char* location_json);
void urnet_connect_view_controller_disconnect(uint64_t self);
bool urnet_connect_view_controller_get_connected(uint64_t self);
char* urnet_connect_view_controller_get_connection_status(uint64_t self);
uint64_t urnet_connect_view_controller_get_grid(uint64_t self);
char* urnet_connect_view_controller_get_selected_location(uint64_t self);
void urnet_connect_view_controller_start(uint64_t self);
void urnet_connect_view_controller_stop(uint64_t self);
/* ----- ContractDetailsViewController ----- */

uint64_t urnet_contract_details_view_controller_add_contract_rows_listener(uint64_t self, urnet_contract_rows_cb listener_contract_rows_changed, void* listener_user_data);
void urnet_contract_details_view_controller_close(uint64_t self);
char* urnet_contract_details_view_controller_get_client_contract_rows(uint64_t self);
char* urnet_contract_details_view_controller_get_contract_rows(uint64_t self);
char* urnet_contract_details_view_controller_get_provider_contract_rows(uint64_t self);
int64_t urnet_contract_details_view_controller_pending_count(uint64_t self);
void urnet_contract_details_view_controller_set_at_top(uint64_t self, bool at_top);
void urnet_contract_details_view_controller_start(uint64_t self);
void urnet_contract_details_view_controller_stop(uint64_t self);
/* ----- ContractViewController ----- */

uint64_t urnet_contract_view_controller_add_throughput_listener(uint64_t self, urnet_throughput_cb listener_throughput_changed, void* listener_user_data);
void urnet_contract_view_controller_close(uint64_t self);
char* urnet_contract_view_controller_get_packet_stats(uint64_t self);
char* urnet_contract_view_controller_get_provider_packet_stats(uint64_t self);
char* urnet_contract_view_controller_get_provider_throughput_points(uint64_t self);
char* urnet_contract_view_controller_get_provider_transport_distribution(uint64_t self);
char* urnet_contract_view_controller_get_throughput_points(uint64_t self);
char* urnet_contract_view_controller_get_transport_distribution(uint64_t self);
int64_t urnet_contract_view_controller_get_window_duration_seconds(uint64_t self);
void urnet_contract_view_controller_packet_stats_changed(uint64_t self, const char* packet_stats_json);
void urnet_contract_view_controller_set_window_duration_seconds(uint64_t self, int64_t seconds);
void urnet_contract_view_controller_start(uint64_t self);
void urnet_contract_view_controller_stop(uint64_t self);
/* ----- Device ----- */

uint64_t urnet_device_add_allow_foreground_change_listener(uint64_t self, urnet_allow_foreground_change_cb listener_allow_foreground_changed, void* listener_user_data);
uint64_t urnet_device_add_auth_logout_listener(uint64_t self, urnet_auth_logout_cb listener_auth_logout, void* listener_user_data);
void urnet_device_add_block_action_override(uint64_t self, const char* override_json);
uint64_t urnet_device_add_block_action_overrides_change_listener(uint64_t self, urnet_block_action_overrides_change_cb listener_block_action_overrides_changed, void* listener_user_data);
uint64_t urnet_device_add_block_action_window_change_listener(uint64_t self, urnet_block_action_window_change_cb listener_block_action_window_changed, void* listener_user_data);
uint64_t urnet_device_add_block_stats_change_listener(uint64_t self, urnet_block_stats_change_cb listener_block_stats_changed, void* listener_user_data);
uint64_t urnet_device_add_blocker_enabled_change_listener(uint64_t self, urnet_blocker_enabled_change_cb listener_blocker_enabled_changed, void* listener_user_data);
uint64_t urnet_device_add_can_prompt_intro_funnel_change_listener(uint64_t self, urnet_can_prompt_intro_funnel_change_cb listener_can_prompt_intro_funnel_changed, void* listener_user_data);
uint64_t urnet_device_add_can_refer_change_listener(uint64_t self, urnet_can_refer_change_cb listener_can_refer_changed, void* listener_user_data);
uint64_t urnet_device_add_can_show_rating_dialog_change_listener(uint64_t self, urnet_can_show_rating_dialog_change_cb listener_can_show_rating_dialog_changed, void* listener_user_data);
uint64_t urnet_device_add_connect_change_listener(uint64_t self, urnet_connect_change_cb listener_connect_changed, void* listener_user_data);
uint64_t urnet_device_add_connect_location_change_listener(uint64_t self, urnet_connect_location_change_cb listener_connect_location_changed, void* listener_user_data);
uint64_t urnet_device_add_connected_provider_location_change_listener(uint64_t self, urnet_connected_provider_location_change_cb listener_connected_provider_locations_changed, void* listener_user_data);
uint64_t urnet_device_add_contract_status_change_listener(uint64_t self, urnet_contract_status_change_cb listener_contract_status_changed, void* listener_user_data);
uint64_t urnet_device_add_default_location_change_listener(uint64_t self, urnet_default_location_change_cb listener_default_location_changed, void* listener_user_data);
uint64_t urnet_device_add_dns_resolver_settings_change_listener(uint64_t self, urnet_dns_resolver_settings_change_cb listener_dns_resolver_settings_changed, void* listener_user_data);
uint64_t urnet_device_add_egress_contract_details_change_listener(uint64_t self, urnet_contract_details_change_cb listener_contract_details_changed, void* listener_user_data);
uint64_t urnet_device_add_egress_contract_stats_change_listener(uint64_t self, urnet_contract_stats_change_cb listener_contract_stats_changed, void* listener_user_data);
uint64_t urnet_device_add_extender_status_change_listener(uint64_t self, urnet_extender_status_change_cb listener_extender_status_changed, void* listener_user_data);
uint64_t urnet_device_add_ingress_contract_details_change_listener(uint64_t self, urnet_contract_details_change_cb listener_contract_details_changed, void* listener_user_data);
uint64_t urnet_device_add_ingress_contract_stats_change_listener(uint64_t self, urnet_contract_stats_change_cb listener_contract_stats_changed, void* listener_user_data);
uint64_t urnet_device_add_jwt_refresh_listener(uint64_t self, urnet_jwt_refresh_cb listener_jwt_refreshed, void* listener_user_data);
uint64_t urnet_device_add_network_peers_change_listener(uint64_t self, urnet_network_peers_change_cb listener_network_peers_changed, void* listener_user_data);
uint64_t urnet_device_add_offline_change_listener(uint64_t self, urnet_offline_change_cb listener_offline_changed, void* listener_user_data);
uint64_t urnet_device_add_packet_stats_change_listener(uint64_t self, urnet_packet_stats_change_cb listener_packet_stats_changed, void* listener_user_data);
uint64_t urnet_device_add_performance_profile_change_listener(uint64_t self, urnet_performance_profile_change_cb listener_performance_profile_changed, void* listener_user_data);
uint64_t urnet_device_add_provide_change_listener(uint64_t self, urnet_provide_change_cb listener_provide_changed, void* listener_user_data);
uint64_t urnet_device_add_provide_control_mode_change_listener(uint64_t self, urnet_provide_control_mode_change_cb listener_provide_control_mode_changed, void* listener_user_data);
uint64_t urnet_device_add_provide_mode_change_listener(uint64_t self, urnet_provide_mode_change_cb listener_provide_mode_changed, void* listener_user_data);
uint64_t urnet_device_add_provide_network_mode_change_listener(uint64_t self, urnet_provide_network_mode_change_cb listener_provide_network_mode_changed, void* listener_user_data);
uint64_t urnet_device_add_provide_paused_change_listener(uint64_t self, urnet_provide_paused_change_cb listener_provide_paused_changed, void* listener_user_data);
uint64_t urnet_device_add_provide_secret_keys_listener(uint64_t self, urnet_provide_secret_keys_cb listener_provide_secret_keys_changed, void* listener_user_data);