csharp/Raw.g.cs

  [DllImport("URnetworkSdk", CallingConvention = CallingConvention.Cdecl)] public static extern void urnet_connect_view_controller_connect_best_available(ulong a0);
  [DllImport("URnetworkSdk", CallingConvention = CallingConvention.Cdecl)] public static extern void urnet_connect_view_controller_connect_location_changed(ulong a0, [MarshalAs(UnmanagedType.LPUTF8Str)] string a1);
  [DllImport("URnetworkSdk", CallingConvention = CallingConvention.Cdecl)] public static extern void urnet_connect_view_controller_disconnect(ulong a0);
  [DllImport("URnetworkSdk", CallingConvention = CallingConvention.Cdecl)] public static extern byte urnet_connect_view_controller_get_connected(ulong a0);
  [DllImport("URnetworkSdk", CallingConvention = CallingConvention.Cdecl)] public static extern IntPtr urnet_connect_view_controller_get_connection_status(ulong a0);
  [DllImport("URnetworkSdk", CallingConvention = CallingConvention.Cdecl)] public static extern ulong urnet_connect_view_controller_get_grid(ulong a0);
  [DllImport("URnetworkSdk", CallingConvention = CallingConvention.Cdecl)] public static extern IntPtr urnet_connect_view_controller_get_selected_location(ulong a0);
  [DllImport("URnetworkSdk", CallingConvention = CallingConvention.Cdecl)] public static extern void urnet_connect_view_controller_start(ulong a0);
  [DllImport("URnetworkSdk", CallingConvention = CallingConvention.Cdecl)] public static extern void urnet_connect_view_controller_stop(ulong a0);
  [DllImport("URnetworkSdk", CallingConvention = CallingConvention.Cdecl)] public static extern ulong urnet_contract_details_view_controller_add_contract_rows_listener(ulong a0, urnet_contract_rows_cb a1, IntPtr a2);
  [DllImport("URnetworkSdk", CallingConvention = CallingConvention.Cdecl)] public static extern void urnet_contract_details_view_controller_close(ulong a0);
  [DllImport("URnetworkSdk", CallingConvention = CallingConvention.Cdecl)] public static extern IntPtr urnet_contract_details_view_controller_get_client_contract_rows(ulong a0);
  [DllImport("URnetworkSdk", CallingConvention = CallingConvention.Cdecl)] public static extern IntPtr urnet_contract_details_view_controller_get_contract_rows(ulong a0);
  [DllImport("URnetworkSdk", CallingConvention = CallingConvention.Cdecl)] public static extern IntPtr urnet_contract_details_view_controller_get_provider_contract_rows(ulong a0);
  [DllImport("URnetworkSdk", CallingConvention = CallingConvention.Cdecl)] public static extern long urnet_contract_details_view_controller_pending_count(ulong a0);
  [DllImport("URnetworkSdk", CallingConvention = CallingConvention.Cdecl)] public static extern void urnet_contract_details_view_controller_set_at_top(ulong a0, byte a1);
  [DllImport("URnetworkSdk", CallingConvention = CallingConvention.Cdecl)] public static extern void urnet_contract_details_view_controller_start(ulong a0);
  [DllImport("URnetworkSdk", CallingConvention = CallingConvention.Cdecl)] public static extern void urnet_contract_details_view_controller_stop(ulong a0);
  [DllImport("URnetworkSdk", CallingConvention = CallingConvention.Cdecl)] public static extern ulong urnet_contract_view_controller_add_throughput_listener(ulong a0, urnet_throughput_cb a1, IntPtr a2);
  [DllImport("URnetworkSdk", CallingConvention = CallingConvention.Cdecl)] public static extern void urnet_contract_view_controller_close(ulong a0);
  [DllImport("URnetworkSdk", CallingConvention = CallingConvention.Cdecl)] public static extern IntPtr urnet_contract_view_controller_get_packet_stats(ulong a0);
  [DllImport("URnetworkSdk", CallingConvention = CallingConvention.Cdecl)] public static extern IntPtr urnet_contract_view_controller_get_provider_packet_stats(ulong a0);
  [DllImport("URnetworkSdk", CallingConvention = CallingConvention.Cdecl)] public static extern IntPtr urnet_contract_view_controller_get_provider_throughput_points(ulong a0);
  [DllImport("URnetworkSdk", CallingConvention = CallingConvention.Cdecl)] public static extern IntPtr urnet_contract_view_controller_get_provider_transport_distribution(ulong a0);
  [DllImport("URnetworkSdk", CallingConvention = CallingConvention.Cdecl)] public static extern IntPtr urnet_contract_view_controller_get_throughput_points(ulong a0);
  [DllImport("URnetworkSdk", CallingConvention = CallingConvention.Cdecl)] public static extern IntPtr urnet_contract_view_controller_get_transport_distribution(ulong a0);
  [DllImport("URnetworkSdk", CallingConvention = CallingConvention.Cdecl)] public static extern long urnet_contract_view_controller_get_window_duration_seconds(ulong a0);
  [DllImport("URnetworkSdk", CallingConvention = CallingConvention.Cdecl)] public static extern void urnet_contract_view_controller_packet_stats_changed(ulong a0, [MarshalAs(UnmanagedType.LPUTF8Str)] string a1);
  [DllImport("URnetworkSdk", CallingConvention = CallingConvention.Cdecl)] public static extern void urnet_contract_view_controller_set_window_duration_seconds(ulong a0, long a1);
  [DllImport("URnetworkSdk", CallingConvention = CallingConvention.Cdecl)] public static extern void urnet_contract_view_controller_start(ulong a0);
  [DllImport("URnetworkSdk", CallingConvention = CallingConvention.Cdecl)] public static extern void urnet_contract_view_controller_stop(ulong a0);
  [DllImport("URnetworkSdk", CallingConvention = CallingConvention.Cdecl)] public static extern ulong urnet_device_add_allow_foreground_change_listener(ulong a0, urnet_allow_foreground_change_cb a1, IntPtr a2);
  [DllImport("URnetworkSdk", CallingConvention = CallingConvention.Cdecl)] public static extern ulong urnet_device_add_auth_logout_listener(ulong a0, urnet_auth_logout_cb a1, IntPtr a2);
  [DllImport("URnetworkSdk", CallingConvention = CallingConvention.Cdecl)] public static extern void urnet_device_add_block_action_override(ulong a0, [MarshalAs(UnmanagedType.LPUTF8Str)] string a1);
  [DllImport("URnetworkSdk", CallingConvention = CallingConvention.Cdecl)] public static extern ulong urnet_device_add_block_action_overrides_change_listener(ulong a0, urnet_block_action_overrides_change_cb a1, IntPtr a2);
  [DllImport("URnetworkSdk", CallingConvention = CallingConvention.Cdecl)] public static extern ulong urnet_device_add_block_action_window_change_listener(ulong a0, urnet_block_action_window_change_cb a1, IntPtr a2);
  [DllImport("URnetworkSdk", CallingConvention = CallingConvention.Cdecl)] public static extern ulong urnet_device_add_block_stats_change_listener(ulong a0, urnet_block_stats_change_cb a1, IntPtr a2);
  [DllImport("URnetworkSdk", CallingConvention = CallingConvention.Cdecl)] public static extern ulong urnet_device_add_blocker_enabled_change_listener(ulong a0, urnet_blocker_enabled_change_cb a1, IntPtr a2);
  [DllImport("URnetworkSdk", CallingConvention = CallingConvention.Cdecl)] public static extern ulong urnet_device_add_can_prompt_intro_funnel_change_listener(ulong a0, urnet_can_prompt_intro_funnel_change_cb a1, IntPtr a2);
  [DllImport("URnetworkSdk", CallingConvention = CallingConvention.Cdecl)] public static extern ulong urnet_device_add_can_refer_change_listener(ulong a0, urnet_can_refer_change_cb a1, IntPtr a2);
  [DllImport("URnetworkSdk", CallingConvention = CallingConvention.Cdecl)] public static extern ulong urnet_device_add_can_show_rating_dialog_change_listener(ulong a0, urnet_can_show_rating_dialog_change_cb a1, IntPtr a2);
  [DllImport("URnetworkSdk", CallingConvention = CallingConvention.Cdecl)] public static extern ulong urnet_device_add_connect_change_listener(ulong a0, urnet_connect_change_cb a1, IntPtr a2);
  [DllImport("URnetworkSdk", CallingConvention = CallingConvention.Cdecl)] public static extern ulong urnet_device_add_connect_location_change_listener(ulong a0, urnet_connect_location_change_cb a1, IntPtr a2);
  [DllImport("URnetworkSdk", CallingConvention = CallingConvention.Cdecl)] public static extern ulong urnet_device_add_connected_provider_location_change_listener(ulong a0, urnet_connected_provider_location_change_cb a1, IntPtr a2);
  [DllImport("URnetworkSdk", CallingConvention = CallingConvention.Cdecl)] public static extern ulong urnet_device_add_contract_status_change_listener(ulong a0, urnet_contract_status_change_cb a1, IntPtr a2);
  [DllImport("URnetworkSdk", CallingConvention = CallingConvention.Cdecl)] public static extern ulong urnet_device_add_default_location_change_listener(ulong a0, urnet_default_location_change_cb a1, IntPtr a2);
  [DllImport("URnetworkSdk", CallingConvention = CallingConvention.Cdecl)] public static extern ulong urnet_device_add_dns_resolver_settings_change_listener(ulong a0, urnet_dns_resolver_settings_change_cb a1, IntPtr a2);
  [DllImport("URnetworkSdk", CallingConvention = CallingConvention.Cdecl)] public static extern ulong urnet_device_add_egress_contract_details_change_listener(ulong a0, urnet_contract_details_change_cb a1, IntPtr a2);
  [DllImport("URnetworkSdk", CallingConvention = CallingConvention.Cdecl)] public static extern ulong urnet_device_add_egress_contract_stats_change_listener(ulong a0, urnet_contract_stats_change_cb a1, IntPtr a2);
  [DllImport("URnetworkSdk", CallingConvention = CallingConvention.Cdecl)] public static extern ulong urnet_device_add_extender_status_change_listener(ulong a0, urnet_extender_status_change_cb a1, IntPtr a2);
  [DllImport("URnetworkSdk", CallingConvention = CallingConvention.Cdecl)] public static extern ulong urnet_device_add_ingress_contract_details_change_listener(ulong a0, urnet_contract_details_change_cb a1, IntPtr a2);
  [DllImport("URnetworkSdk", CallingConvention = CallingConvention.Cdecl)] public static extern ulong urnet_device_add_ingress_contract_stats_change_listener(ulong a0, urnet_contract_stats_change_cb a1, IntPtr a2);
  [DllImport("URnetworkSdk", CallingConvention = CallingConvention.Cdecl)] public static extern ulong urnet_device_add_jwt_refresh_listener(ulong a0, urnet_jwt_refresh_cb a1, IntPtr a2);
  [DllImport("URnetworkSdk", CallingConvention = CallingConvention.Cdecl)] public static extern ulong urnet_device_add_network_peers_change_listener(ulong a0, urnet_network_peers_change_cb a1, IntPtr a2);
  [DllImport("URnetworkSdk", CallingConvention = CallingConvention.Cdecl)] public static extern ulong urnet_device_add_offline_change_listener(ulong a0, urnet_offline_change_cb a1, IntPtr a2);
  [DllImport("URnetworkSdk", CallingConvention = CallingConvention.Cdecl)] public static extern ulong urnet_device_add_packet_stats_change_listener(ulong a0, urnet_packet_stats_change_cb a1, IntPtr a2);
  [DllImport("URnetworkSdk", CallingConvention = CallingConvention.Cdecl)] public static extern ulong urnet_device_add_performance_profile_change_listener(ulong a0, urnet_performance_profile_change_cb a1, IntPtr a2);
  [DllImport("URnetworkSdk", CallingConvention = CallingConvention.Cdecl)] public static extern ulong urnet_device_add_provide_change_listener(ulong a0, urnet_provide_change_cb a1, IntPtr a2);
  [DllImport("URnetworkSdk", CallingConvention = CallingConvention.Cdecl)] public static extern ulong urnet_device_add_provide_control_mode_change_listener(ulong a0, urnet_provide_control_mode_change_cb a1, IntPtr a2);
  [DllImport("URnetworkSdk", CallingConvention = CallingConvention.Cdecl)] public static extern ulong urnet_device_add_provide_mode_change_listener(ulong a0, urnet_provide_mode_change_cb a1, IntPtr a2);
  [DllImport("URnetworkSdk", CallingConvention = CallingConvention.Cdecl)] public static extern ulong urnet_device_add_provide_network_mode_change_listener(ulong a0, urnet_provide_network_mode_change_cb a1, IntPtr a2);
  [DllImport("URnetworkSdk", CallingConvention = CallingConvention.Cdecl)] public static extern ulong urnet_device_add_provide_paused_change_listener(ulong a0, urnet_provide_paused_change_cb a1, IntPtr a2);
  [DllImport("URnetworkSdk", CallingConvention = CallingConvention.Cdecl)] public static extern ulong urnet_device_add_provide_secret_keys_listener(ulong a0, urnet_provide_secret_keys_cb a1, IntPtr a2);
